--- a/tools/integration/BUILD.bazel
+++ b/tools/integration/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "binary.go",
         "cmd.go",
         "docker.go",
+        "kathara.go",
         "done.go",
         "integration.go",
         "networkalloc.go",
