--- a/control/cmd/control/BUILD.bazel
+++ b/control/cmd/control/BUILD.bazel
@@ -38,6 +38,7 @@ go_library(
         "//pkg/scrypto:go_default_library",
         "//pkg/scrypto/cppki:go_default_library",
         "//pkg/snet:go_default_library",
+        "//private/procperf:go_default_library",
         "//private/app:go_default_library",
         "//private/app/appnet:go_default_library",
         "//private/app/command:go_default_library",
