--- a/private/procperf/BUILD.bazel
+++ b/private/procperf/BUILD.bazel
@@ -5,5 +5,5 @@ go_library(
     srcs = ["procperf.go"],
     importpath = "github.com/scionproto/scion/private/procperf",
     visibility = ["//visibility:public"],
-    deps = ["//pkg/private/serrors:go_default_library"],
+    deps = ["//pkg/private/serrors:go_default_library", "//pkg/log:go_default_library"],
 )
